# workbench

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  NEW_SPEC.md  PLAN.md  README.md  build.ts  list-windows.sh  notes.md  package.json
examples/: home.yml
src/: assembly.rs  bay.ts  bench.ts  bench_ops.rs  cli.ts  config.ts  i3.service.ts  launcher_ui.rs  layout_ops.rs  main.rs  model.rs  runtime.rs  script.ts  service.ts  storage.rs  sway.rs  sway.service.ts  tool.ts  tool_ops.rs  utils.ts
src/apps/: mod.rs  tool.rs
src/apps/browser/: mod.rs
src/apps/chrome/: chrome.ts
src/apps/chrome/extension/: background.ts  manifest.json
src/apps/terminal/: mod.rs
src/apps/tmux/: tmux-app.ts
src/apps/zed/: mod.rs
src/tools/chrome/: chrome.ts
usecases/: bench-sync.service  install-service.sh  rofi-menu.sh
