[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
anyhow = "1"
gtk4 = { version = "0.7", package = "gtk4", optional = true }
ureq = { version = "2", features = ["json"] }
dialoguer = "0.11"

[features]
default = []
launcher-ui = ["gtk4"]
