[package]
name = "yard"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
anyhow = "1"
ureq = { version = "2", features = ["json"] }
dialoguer = "0.11"
owo-colors = { version = "3", features = ["supports-colors"] }
